# covid_treatment_sickbed

./: Cargo.toml
data/: 20220914T0000JST.json  20220921T0000JST.json  20220928T0000JST.json  20221005T0000JST.json  20221012T0000JST.json  20221019T0000JST.json  20221026T0000JST.json  20221102T0000JST.json  20221109T0000JST.json  20221116T0000JST.json  20221123T0000JST.json  20221130T0000JST.json
data-formatter/: Cargo.toml
data-formatter/src/: main.rs
data-scraper/: Cargo.toml
data-scraper/src/: main.rs
src/: main.rs
util/src/: lib.rs
