[package]
name = "data-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
scraper = "0.13"
regex = "1"
lazy-regex = "2.3"
chrono = "0.4"
chrono-tz = "0.8"
argopt = "0.3"